Add submission_project2 with all 5 parts, update README with Java 9+ commands, improve .gitignore to exclude all CSV files